fix search input overlapping container width

--- a/src/components/filter-search-bar/search-field/search-field.module.scss
+++ b/src/components/filter-search-bar/search-field/search-field.module.scss
@@ -46,6 +46,7 @@
 	border: none;
 	border-bottom: 1px solid var(--darkPrimary);
 	outline: none;
+	width: 100%;
 	min-width: 120px;
 	top: 0;
 	left: 0;
